--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
@@ -65,35 +65,36 @@
 		<div style="margin-top: 20px;">
 			@if (bundleSeleccionado != null)
 			{
-				<div class="perfil" style="margin-bottom: 40px; padding: 30px; display: flex; align-items: center; flex-direction: row; position: -webkit-sticky; position: sticky; top: 70px; z-index: 3;">
+				<div class="perfil" style="margin-bottom: 40px; padding: 20px; display: flex; align-items: center; flex-direction: row; position: -webkit-sticky; position: sticky; top: 70px; z-index: 3;">
 					<button @onclick="@(e => CerrarBundle(e))" class="boton-pequeño" style="width: auto; text-align: center; font-size: 23px; padding: 10px 20px;">
 						<i class="fa-solid fa-arrow-left"></i>
 					</button>
 
-					<a href="@Herramientas.EnlaceAcortador.Generar(bundleSeleccionado.Enlace, bundleSeleccionado.Tipo)" style="text-decoration: none; width: 100%; color: var(--colorEnlace);" target="_blank">
-						<div style="display: flex; align-items: center; flex-direction: row;">
+					<div style="display: flex; align-items: center; flex-direction: row;">
+						<a href="@Herramientas.EnlaceAcortador.Generar(bundleSeleccionado.Enlace, bundleSeleccionado.Tipo)" style="width: auto;" target="_blank">
 							<div style="height: 60px; padding-left: 40px; padding-right: 20px;">
 								<img src="@Bundles2.BundlesCargar.DevolverBundle(bundleSeleccionado.Tipo).ImagenTienda" style="height: 100%;" alt="@bundleSeleccionado.NombreBundle" />
 							</div>
+						</a>
 
-							<div style="padding-left: 20px; padding-right: 20px;">
-								<div style="font-size: 18px; margin-bottom: 5px;">
-									@bundleSeleccionado.NombreBundle
-								</div>
-								<div>
-									@MostrarFecha(bundleSeleccionado.FechaEmpieza, bundleSeleccionado.FechaTermina)
-								</div>
+						<div style="padding-left: 20px; padding-right: 20px;">
+							<a href="@Herramientas.EnlaceAcortador.Generar(bundleSeleccionado.Enlace, bundleSeleccionado.Tipo)" class="boton-pequeño" style="background-color: transparent; padding: 5px; font-size: 20px; margin-bottom: 5px;" target="_blank">
+								@bundleSeleccionado.NombreBundle
+							</a>
+
+							<div style="display: flex; align-items: center; flex-direction: row; font-size: 14px;">
+								<a href="@Herramientas.EnlaceAcortador.Generar(bundleSeleccionado.Enlace, bundleSeleccionado.Tipo)" class="boton-pequeño" style="width: auto; text-align: center; padding: 4px 8px; margin-right: 20px; font-size: 14px;" target="_blank">
+									@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String3")
+								</a>
+
+								<a href="/bundle/@bundleSeleccionado.Id" class="boton-pequeño" style="width: auto; text-align: center; padding: 4px 8px; margin-right: 20px; font-size: 14px;">
+									<i class="fa-solid fa-link"></i>
+								</a>
+
+								@MostrarFecha(bundleSeleccionado.FechaEmpieza, bundleSeleccionado.FechaTermina)
 							</div>
 						</div>
-					</a>
-
-					<a href="@Herramientas.EnlaceAcortador.Generar(bundleSeleccionado.Enlace, bundleSeleccionado.Tipo)" class="boton-pequeño" style="width: auto; text-align: center; font-size: 23px; padding: 10px 20px; margin-right: 20px;">
-						<i class="fa-solid fa-link"></i>
-					</a>
-
-					<a href="/bundle/@bundleSeleccionado.Id" class="boton-pequeño" style="width: auto; text-align: center; font-size: 23px; padding: 10px 20px;">
-						<i class="fa-solid fa-plus"></i>
-					</a>					
+					</div>	
 				</div>
 
 				@if (bundleSeleccionado.Tiers.Count > 0)
@@ -212,13 +213,13 @@
 										</div>
 
 										<a href="/game/@juego.JuegoId" class="boton-pequeño" style="padding: 0px; text-align: center; margin-bottom: 20px; position: relative; @fondoColor">
-											<div style="display: flex; align-items: center; padding: 10px;">
+											<div style="display: flex; align-items: center; padding: 2px;">
 												<div style="text-align: center; width: 17%;">
 													<img src="@juego.Imagen" style="width: 100%; height: 100%;" alt="@juego.Nombre"/>
 												</div>
 
 												<div style="padding-left: 20px; padding-right: 20px; text-align: left;">
-													<div style="margin-bottom: 10px; font-size: 17px;">
+													<div style="margin-bottom: 7px; font-size: 17px;">
 														@juego.Nombre
 													</div>
 
@@ -236,7 +237,7 @@
 													</div>
 												</div>
 
-												<div style="margin-left: auto; margin-right: 5px; display: flex; align-items: center;">
+												<div style="margin-left: auto; margin-right: 15px; display: flex; align-items: center;">
 													@{
 														if (juego.Juego.PrecioMinimosHistoricos != null)
 														{
@@ -489,7 +490,7 @@
 
 				if (tiempo == true)
 				{
-					SteamUsuario datos = await Cuenta.CargarDatos(usuario.SteamAccount);
+					SteamUsuario datos = await APIs.Steam.Cuenta.CargarDatos(usuario.SteamAccount);
 
 					usuario.SteamGames = datos.Juegos;
 					usuario.SteamWishlist = datos.Deseados;
