--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -590,7 +590,7 @@ else
 
 				if (tiempo == true)
 				{
-					SteamUsuario datos = await Cuenta.CargarDatos(usuario.SteamAccount);
+					SteamUsuario datos = await APIs.Steam.Cuenta.CargarDatos(usuario.SteamAccount);
 
 					usuario.SteamGames = datos.Juegos;
 					usuario.SteamWishlist = datos.Deseados;
