--- a/pepeizqs deals web/Pages/Componentes/Secciones/Sorteos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Sorteos.razor
@@ -234,7 +234,7 @@
 
                 if (tiempo == true)
                 {
-                    SteamUsuario datos = await Cuenta.CargarDatos(usuario.SteamAccount);
+                    SteamUsuario datos = await APIs.Steam.Cuenta.CargarDatos(usuario.SteamAccount);
 
                     usuario.SteamGames = datos.Juegos;
                     usuario.SteamWishlist = datos.Deseados;
