--- a/pepeizqs deals web/Pages/Shared/bundle.cshtml
+++ b/pepeizqs deals web/Pages/Shared/bundle.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model pepeizqs_deals_web.Pages.BundleModel
+@* @model pepeizqs_deals_web.Pages.BundleModel *@
 
 @using Herramientas
 @using Microsoft.AspNetCore.Identity
@@ -9,10 +9,12 @@
 @inject SignInManager<Usuario> SignInManager
 @inject UserManager<Usuario> UserManager
 
+@model BundleModel2
+
 @{
 	#nullable disable
 
-	ViewData["Title"] = @Model.bundle.NombreBundle + " • " + @Model.bundle.NombreTienda;
+	// ViewData["Title"] = "test1" + " • " + "test2";
 	Layout = "/Pages/Shared/_Layout.cshtml";
 
 	bool usuarioLogeado = SignInManager.IsSignedIn(User);
@@ -35,8 +37,8 @@
 {
 	@if (adminLogeado == true)
 	{
-		@(await Html.RenderComponentAsync<Componentes.Admin.Bundle>(RenderMode.ServerPrerendered, new { idioma = Model.idioma, bundleId = Model.bundle.Id }))
+		@(await Html.RenderComponentAsync<Componentes.Admin.Bundle>(RenderMode.ServerPrerendered, new { idioma = "es-ES", bundleId = Model.Id }))
 	}
 }
 
-@(await Html.RenderComponentAsync<Componentes.Secciones.Bundle>(RenderMode.ServerPrerendered, new { idioma = Model.idioma, bundleId = Model.bundle.Id }))
+@(await Html.RenderComponentAsync<Componentes.Secciones.Bundle>(RenderMode.ServerPrerendered, new { idioma = "es-ES", bundleId = Model.Id }))
